--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "8157447f-6440-4306-bce2-60dba292ea8b"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
