--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
     "jquery": "^3.6.0",
     "rxjs": "~7.4.0",
+    "split": "^1.0.1",
+    "sweetalert2": "^11.3.9",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
